# coursework

./: CMakeLists.txt  Seabattle  coursework.cpp  main.cpp  makefile  sourcefile  todoshnik
Headers/: Array.h  Bot.h  BotHard.h  BotSoft.h  ConnectType.h  DifLevels.h  Game.h  GetCode.h  InputCode.h  InstructionManual.h  List.h  ListOfCoord.h  ListOfShips.h  MainMenu.h  NetwStatus.h  PlacementField.h  PlayWindow.h  Player.h  Socket.h  WindowExit.h  WindowLose.h  WindowWin.h  connect_type.h  dif_levels.h  get_code.h  input_code.cpp  input_code.h  instruction_manual.h  logs.h  main_menu.h  netw_status.h  placemenr_field.h  placement_field.h  play_window.cpp  play_window.h  socket.h  window_exit.h  window_lose.h  window_win.h
Resources/Txt/: PointsFor1  PointsFor2
Resourses/Txt/: PointFor2  PointsFor3  PointsFor4
Sources/: Array.cpp  BotHard.cpp  BotSoft.cpp  ConnectType.cpp  DifLevels.cpp  Game.cpp  GetCode.cpp  InputCode.cpp  InstructionManual.cpp  List.cpp  ListOfCoord.cpp  ListOfShips.cpp  Logs.cpp  MainMenu.cpp  NetwStatus.cpp  PlacementField.cpp  PlayWindow.cpp  Player.cpp  Socket.cpp  WindowExit.cpp  WindowLose.cpp  WindowWin.cpp  connect_type.cpp  dif_levels.cpp  get_code.cpp  input_code.cpp  instruction_manual.cpp  logs.cpp  main.cpp  main_menu.cpp  netw_status.cpp  placemenr_field.cpp  placement_field.cpp  play_window.cpp  socket.cpp  window_exit.cpp  window_lose.cpp  window_win.cpp
